--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="icon" type="image/x-icon" href="/imagens/icone.png">
+    <link rel="icon" type="image/x-icon" href="icone.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaves</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap">
 </head>
 <body>
@@ -24,14 +24,14 @@
             <section class="video-section" id="videos">
                 <h2>Vídeos do Chaves</h2>
                 <video controls>
-                    <source src="/imagens/video.mp4" type="video/mp4">
+                    <source src="video.mp4" type="video/mp4">
                     Seu navegador não suporta vídeos.
                 </video>
             </section>
 
             <section class="image-section" id="imagens">
                 <h2>Imagens do Seriado</h2>
-                <img src="/imagens/imagem.avif" alt="Chaves e seus amigos">
+                <img src="imagem.avif" alt="Chaves e seus amigos">
             </section>
 
             <section id="curiosidades">
